# CloningChatGpt

./: app.py  pyproject.toml
static/js/: script.js
static/src/css/: input.css
templates/: index.html
