[tool.poetry]
name = "cloningchatgpt"
version = "0.1.0"
description = "Clone de chat Gpt avec Flask"
authors = ["AgohChris <agihchris90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "2.3.3"
openai = "0.27.10"
python-dotenv = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
